Initial MidoNet plugin addition

--- a/etc/openstack_deploy/env.d/nova.yml
+++ b/etc/openstack_deploy/env.d/nova.yml
@@ -69,7 +69,7 @@ container_skel:
     belongs_to:
       - compute_containers
     contains:
-      - neutron_linuxbridge_agent
+      # - neutron_linuxbridge_agent
       - nova_compute
     properties:
       is_metal: true
