--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -116,3 +116,14 @@
   version: master
 - name: sshd
   src: https://github.com/willshersystems/ansible-sshd
+- name: midonet_repos
+  src: abelboldu.midonet-repos
+- name: zookeeper_server
+  src: abelboldu.zookeeper
+- name: cassandra_server
+  src: abelboldu.cassandra
+- name: midonet_agent
+  src: abelboldu.midonet-agent
+- name: midonet_cluster
+  src: abelboldu.midonet-cluster
+
