Update user_midonet_neutron.yml for mitaka

--- a/playbooks/setup-midonet.yml
+++ b/playbooks/setup-midonet.yml
@@ -1,6 +1,6 @@
 ---
 
-- include: midonet-repos-install.yml
+#- include: midonet-repos-install.yml
 - include: zookeeper-install.yml
 - include: cassandra-install.yml
 - include: midonet-agent-install.yml
