--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -75,7 +75,8 @@
   version: master
 - name: os_neutron
   scm: git
-  src: https://git.openstack.org/openstack/openstack-ansible-os_neutron
+  src: https://github.com/syoder89/openstack-ansible-os_neutron.git
+#  src: https://git.openstack.org/openstack/openstack-ansible-os_neutron
   version: master
 - name: os_nova
   scm: git
