--- a/etc/openstack_deploy/user_midonet_neutron.yml
+++ b/etc/openstack_deploy/user_midonet_neutron.yml
@@ -1,10 +1,11 @@
-# Enable midonet plugin
+## Enable midonet plugin
 neutron_plugin_type: midonet
 # Do not install neutron on venv (alongside with midonet packages)
-neutron_venv_enabled: false
+#neutron_venv_enabled: false
 # Neutron Services
 neutron_services:
  neutron-dhcp-agent:
+   group: neutron_dhcp_agent
    service_name: neutron-dhcp-agent
    service_en: False
    service_conf: dhcp_agent.ini
@@ -14,15 +15,17 @@ neutron_services:
    config_overrides: "{{ neutron_dhcp_agent_ini_overrides }}"
    config_type: "ini"
  neutron-linuxbridge-agent:
+   group: neutron_linuxbridge_agent
    service_name: neutron-linuxbridge-agent
    service_en: False
-   service_conf: plugins/ml2/ml2_conf.ini
+   service_conf: plugins/ml2/linuxbridge_agent.ini
    service_group: neutron_linuxbridge_agent
    service_rootwrap: rootwrap.d/linuxbridge-plugin.filters
-   config_options: --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/ml2_conf.ini
-   config_overrides: "{{ neutron_ml2_conf_ini_overrides }}"
+   config_options: --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/ml2_conf.ini --config-file /etc/neutron/plugins/ml2/linuxbridge_agent.ini
+   config_overrides: "{{ neutron_linuxbridge_agent_ini_overrides }}"
    config_type: "ini"
  neutron-metadata-agent:
+   group: neutron_metadata_agent
    service_name: neutron-metadata-agent
    service_en: False
    service_conf: metadata_agent.ini
@@ -31,16 +34,18 @@ neutron_services:
    config_overrides: "{{ neutron_metadata_agent_ini_overrides }}"
    config_type: "ini"
  neutron-metering-agent:
+   group: neutron_metering_agent
    service_name: neutron-metering-agent
-   service_en: False
+   service_en: "{{ neutron_metering }}"
    service_conf: metering_agent.ini
    service_group: neutron_agent
    config_options: --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/metering_agent.ini
    config_overrides: "{{ neutron_metering_agent_ini_overrides }}"
    config_type: "ini"
  neutron-l3-agent:
+   group: neutron_l3_agent
    service_name: neutron-l3-agent
-   service_en: False
+   service_en: "{{ neutron_l3 }}"
    service_conf: l3_agent.ini
    service_group: neutron_agent
    service_rootwrap: rootwrap.d/l3.filters
@@ -48,8 +53,19 @@ neutron_services:
    config_overrides: "{{ neutron_l3_agent_ini_overrides }}"
    config_type: "ini"
  neutron-lbaas-agent:
+   group: neutron_lbaas_agent
    service_name: neutron-lbaas-agent
-   service_en: False
+   service_en: "{{ neutron_lbaas }}"
+   service_conf: lbaas_agent.ini
+   service_group: neutron_agent
+   service_rootwrap: rootwrap.d/lbaas-haproxy.filters
+   config_options: --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/lbaas_agent.ini
+   config_overrides: "{{ neutron_lbaas_agent_ini_overrides }}"
+   config_type: "ini"
+ neutron-lbaasv2-agent:
+   group: neutron_lbaas_agent
+   service_name: neutron-lbaasv2-agent
+   service_en: "{{ neutron_lbaasv2 }}"
    service_conf: lbaas_agent.ini
    service_group: neutron_agent
    service_rootwrap: rootwrap.d/lbaas-haproxy.filters
@@ -57,6 +73,7 @@ neutron_services:
    config_overrides: "{{ neutron_lbaas_agent_ini_overrides }}"
    config_type: "ini"
  neutron-server:
+   group: neutron_server
    service_name: neutron-server
    service_en: True
    service_group: neutron_server
