--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -76,7 +76,7 @@
 - name: os_neutron
   scm: git
   src: https://github.com/syoder89/openstack-ansible-os_neutron.git
-  version: 9e6e31fdab18a96a6d7892165e0eea1020346538
+  version: 30cf7ecf2857a30aae403c4c4f4ef3eec59a7695
 #  src: https://git.openstack.org/openstack/openstack-ansible-os_neutron
 #  version: dd05e2e1695da028a4a06beb241a4c5db8e98021
 - name: os_nova
@@ -122,10 +122,12 @@
 - name: midonet_repos
   src: abelboldu.midonet-repos
 - name: zookeeper_server
-  src: abelboldu.zookeeper
+  src: syoder89.zookeeper
 - name: cassandra_server
-  src: abelboldu.cassandra
+  src: syoder89.cassandra
 - name: midonet_agent
-  src: abelboldu.midonet-agent
+  src: https://github.com/syoder89/ansible-midonet-agent.git
+  version: a504532dab623154107e611accf55c8c2f584028
 - name: midonet_cluster
-  src: abelboldu.midonet-cluster
+  src: https://github.com/syoder89/ansible-midonet-cluster.git
+  version: 94f88a9faced0256f2572f333b66131011934c67
