--- a/playbooks/os-neutron-install.yml
+++ b/playbooks/os-neutron-install.yml
@@ -149,6 +149,8 @@
       tags:
         - neutron-config
   roles:
+    - role: "midonet_repos"
+      midonet_version: current
     - role: "os_neutron"
       neutron_venv_tag: "{{ openstack_release }}"
       neutron_venv_download_url: "{{ openstack_repo_url }}/venvs/{{ openstack_release }}/{{ ansible_distribution | lower }}/neutron-{{ openstack_release }}.tgz"
