--- a/etc/openstack_deploy/env.d/cassandra.yml
+++ b/etc/openstack_deploy/env.d/cassandra.yml
@@ -8,10 +8,17 @@ component_skel:
 container_skel:
   cassandra_container:
     belongs_to:
-      - infra_containers
-      - shared-infra_containers
+      - cassandra_containers
     contains:
       - cassandra
     properties:
       service_name: cassandra
       container_release: trusty
+
+physical_skel:
+  cassandra_containers:
+    belongs_to:
+      - all_containers
+  cassandra_hosts:
+    belongs_to:
+      - hosts
