--- a/etc/openstack_deploy/env.d/zookeeper.yml
+++ b/etc/openstack_deploy/env.d/zookeeper.yml
@@ -8,10 +8,17 @@ component_skel:
 container_skel:
   zookeeper_container:
     belongs_to:
-      - infra_containers
-      - shared-infra_containers
+      - zookeeper_containers
     contains:
       - zookeeper
     properties:
       service_name: zookeeper
       container_release: trusty
+
+physical_skel:
+  zookeeper_containers:
+    belongs_to:
+      - all_containers
+  zookeeper_hosts:
+    belongs_to:
+      - hosts
