--- a/etc/openstack_deploy/env.d/midonet-cluster.yml
+++ b/etc/openstack_deploy/env.d/midonet-cluster.yml
@@ -8,6 +8,7 @@ component_skel:
 container_skel:
   midonet_cluster_container:
     belongs_to:
+      - os-infra_containers
       - midonet_cluster_containers
     contains:
       - midonet_cluster
