--- a/etc/openstack_deploy/user_midonet_neutron.yml
+++ b/etc/openstack_deploy/user_midonet_neutron.yml
@@ -5,8 +5,10 @@ neutron_venv_enabled: false
 neutron_plugin_base:
   - midonet.neutron.services.l3.l3_midonet.MidonetL3ServicePlugin
   - lbaas
-#  - vpnaas
+  - vpnaas
 neutron_plugin_loaded_base: "{% for plugin in neutron_plugin_base %}{{ plugin }}{% if not loop.last %},{% endif %}{% endfor %}"
+neutron_vpnaas: True
+neutron_vpn_provider: "VPN:Midonet:midonet.neutron.services.vpn.service_drivers.midonet_ipsec.MidonetIPsecVPNDriver:default"
 neutron_lbaas: True
 # Neutron Services
 neutron_services:
@@ -78,9 +80,24 @@ neutron_services:
    config_options: --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/lbaas_agent.ini
    config_overrides: "{{ neutron_lbaas_agent_ini_overrides }}"
    config_type: "ini"
+ neutron-vpnaas-agent:
+   group: neutron_l3_agent
+   service_name: neutron-vpnaas-agent
+   service_en: "{{ neutron_vpnaas | bool }}"
+   service_conf: vpnaas_agent.ini
+   service_group: neutron_agent
+   service_rootwrap: rootwrap.d/vpnaas.filters
+   config_options: --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/vpnaas_agent.ini
+   config_overrides: "{{ neutron_vpnaas_agent_ini_overrides }}"
+   config_type: "ini"
  neutron-server:
    group: neutron_server
    service_name: neutron-server
    service_en: True
    service_group: neutron_server
    config_options: "--config-file /etc/neutron/neutron.conf --config-file /etc/neutron/{{ neutron_plugins[neutron_plugin_type].plugin_ini }}"
+
+##midonet_cluster_ip: "{{ groups['midonet_cluster_all'][0] }}"
+midonet_cluster_ip: "{{ internal_lb_vip_address }}"
+midonet_cluster_port: 8183
+midonet_cluster_backend_port: 8181
