--- a/etc/openstack_deploy/user_secrets.yml
+++ b/etc/openstack_deploy/user_secrets.yml
@@ -103,3 +103,9 @@ swift_hash_path_prefix:
 ## haproxy stats password
 haproxy_stats_password:
 haproxy_keepalived_authentication_password:
+
+## Influxdb options
+influxdb_password:
+
+## Elasticsearch options
+elasticsearch_password:
